--- a/index.html
+++ b/index.html
@@ -13,5 +13,66 @@
       <ul id="btn-header"></ul>
     </div>
   </header>
-  <body></body>
+
+  <body>
+    <main>
+      <div class="main-body">
+        <div class="display-users">
+          <div class="usersrow1">
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+          </div>
+          <div class="usersrow2">
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+          </div>
+          <div class="usersrow3">
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+          </div>
+          <div class="usersrow4">
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+          </div>
+          <div class="usersrow5">
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <footer>
+      <div class="footer">
+        <div class="footer-container"></div>
+        <div class="footer-container"></div>
+        <div class="footer-container"></div>
+      </div>
+    </footer>
+  </body>
 </html>
