working on footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/syle.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
 
   <header>
@@ -69,7 +76,19 @@
 
     <footer>
       <div class="footer">
-        <div class="footer-container"></div>
+        <div class="footer-container">
+          <div id="microphone">
+            <i class="fa-solid fa-microphone"></i>
+            <p>Mute</p>
+          </div>
+          <i class="fa-solid fa-chevron-up"></i>
+          <div id="videocam">
+            <i class="fa-solid fa-video"></i>
+            <p>Stop video</p>
+          </div>
+          <i class="fa-solid fa-chevron-up"></i>
+        </div>
+
         <div class="footer-container"></div>
         <div class="footer-container"></div>
       </div>
