--- a/index.html
+++ b/index.html
@@ -26,49 +26,224 @@
       <div class="main-body">
         <div class="display-users">
           <div class="usersrow1">
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
           </div>
           <div class="usersrow2">
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
           </div>
           <div class="usersrow3">
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
           </div>
           <div class="usersrow4">
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
           </div>
           <div class="usersrow5">
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
+            <div class="user">
+              <div class="nametag">
+                <i class="fa-solid fa-microphone-slash"></i>
+                <p>Pinco pallo</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -89,8 +264,44 @@
           <i class="fa-solid fa-chevron-up"></i>
         </div>
 
-        <div class="footer-container"></div>
-        <div class="footer-container"></div>
+        <div class="footer-container">
+          <div id="useradd">
+            <i class="fa-solid fa-user-plus"></i>
+            <p>Invite</p>
+          </div>
+          <div id="microphone">
+            <i class="fa-solid fa-user-group"></i>
+            <p>Manage Partecipants</p>
+          </div>
+          <div id="microphone">
+            <i class="fa-solid fa-chart-column"></i>
+            <p>Polling</p>
+          </div>
+          <div id="microphone">
+            <i class="fa-solid fa-share-from-square"></i>
+            <p>Share Screen</p>
+          </div>
+          <i class="fa-solid fa-chevron-up"></i>
+          <div id="microphone">
+            <i class="fa-regular fa-comment"></i>
+            <p>Chat</p>
+          </div>
+          <div id="microphone">
+            <i class="fa-solid fa-record-vinyl"></i>
+            <p>Record</p>
+          </div>
+          <div id="microphone">
+            <i class="fa-solid fa-table-cells-large"></i>
+            <p>Breakout Rooms</p>
+          </div>
+          <div id="microphone">
+            <i class="fa-solid fa-ellipsis"></i>
+            <p>More</p>
+          </div>
+        </div>
+        <div class="footer-containerright">
+          <p><span>End meeting</span></p>
+        </div>
       </div>
     </footer>
   </body>
